[package]
name = "gdb"
description = "Library for controlling GDB"
version = "0.1.0"
authors = ["Lipka Boldizsár <lipkab@zoho.com>", "Eran Ifrah <eran@codelite.org>"]
repository = "https://github.com/lipk/rust-gdb"
readme = "README.md"
keywords = ["gdb", "debugger"]
license = "GPL-3.0"
edition = "2021"

[dependencies]
regex = "1.7.1"
tokio = { version = "1.2", features = ["full"] }
tracing = "*"
tracing-subscriber = "0.3"

[dev-dependencies]
tokio-test = "*"
